--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,13 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
 
 #app {
-  color: #0000ff;
-  font-size: 16px;
+  width: 100%;
+  height: 100%;
+  background-color: #1C1C1C;
 }
 
