--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,11 @@ html, body {
   margin: 0;
 }
 
+#display-number {
+  color: #D4D4D2;
+  font-size: 16px;
+}
+
 #app {
   width: 100%;
   height: 100%;
